--- a/CreationofMagicalCreatures.html
+++ b/CreationofMagicalCreatures.html
@@ -14,16 +14,19 @@
       <h2>Skapa dina egna magiska husdjur</h2>
    </div>
 
+
    <div class="cmfirstpost">
       <h3> Gör din egen pigmypuff </h3>
        <h4> Du kommer behöva: </h4>
-          <ul>
+    <div class="lista">
+         <ul>
            <li>blab blab bla </li>
            <li>blab blab bla </li>
            <li>blab blab bla </li>
           </ul>
-
+    </div>
          <h4> Så här gör du: </h4>
+    <div class="lista">
           <ol>
            <li> blab blab bla .</li>
            <li> blab blab bla .</li>
@@ -33,7 +36,7 @@
            <li> blab blab bla </li>
            <li> blab blab bla !</li>
          </ol>
-
+    </div>
        <h4> Här kan du se hur jag gjorde: </h4>
        <embed src="https://www.youtube.com/embed/dwBVoAVZ1NY" iframe width="1369" height="579" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
