--- a/acciowand.html
+++ b/acciowand.html
@@ -12,7 +12,7 @@
     <div class="awhero">
       <h1> Accio, wand!</h1>
       <img src="./Image/hpwand.png">
-      <h2> Jag hjälper dig att bli bättre en Olivander på att göra trollstavar! </h2>
+      <h2> Jag hjälper dig att bli bättre än Olivander på att göra trollstavar! </h2>
     <div/>
 
     <dvi class="awfirstpost">
