--- a/CreationofMagicalCreatures.html
+++ b/CreationofMagicalCreatures.html
@@ -8,7 +8,14 @@
   </head>
 
   <body>
-    <div class="cmhero">
+     <a href="./index.html"> <svg xmlns="http://www.w3.org/2000/svg"
+       xmlns:xlink="http://www.w3.org/1999/xlink"
+       x="0px" y="0px" width="45px" height="45px"
+       viewBox="0 0 24 24"><polyline fill="none" stroke="#FFC500"
+       stroke-width="4" stroke-linecap="square" stroke-miterlimit="10"
+       points="17,2 7,12 17,22 " transform="translate(0, 0)" stroke-linejoin="miter"></polyline></svg>
+      </a>
+    <div class="hero2">
       <h1> Creation of Magical Creatures</h1>
         <img src="./Image/hedwig.jpg">
       <h2>Skapa dina egna magiska husdjur</h2>
@@ -39,6 +46,6 @@
     </div>
        <h4> Här kan du se hur jag gjorde: </h4>
        <embed src="https://www.youtube.com/embed/dwBVoAVZ1NY" iframe width="1369" height="579" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  </div>
+
 
 </body>
