--- a/RobesforAllOccasions.html
+++ b/RobesforAllOccasions.html
@@ -9,7 +9,15 @@
   </head>
 
   <body>
-    <div class="rfahero">
+    <div class="arrowh1">
+     <a href="./index.html"> <svg xmlns="http://www.w3.org/2000/svg"
+       xmlns:xlink="http://www.w3.org/1999/xlink"
+       x="0px" y="0px" width="45px" height="45px"
+       viewBox="0 0 24 24"><polyline fill="none" stroke="#FFC500"
+       stroke-width="4" stroke-linecap="square" stroke-miterlimit="10"
+       points="17,2 7,12 17,22 " transform="translate(0, 0)" stroke-linejoin="miter"></polyline></svg>
+      </a>
+    <div class="hero2">
       <h1> Robes for All Occations!</h1>
       <img src="./Image/uniforms.png">
       <h2>Gör dig redo att åka till Hogwarts</h2>
@@ -18,11 +26,13 @@
     <div class="rfafirstpost">
       <h3> Gör din egna slips </h3>
       <h4> Du kommer behöva: </h4>
+    <div class="lista">
         <ul>
           <li>blab blab bla </li>
           <li>blab blab bla </li>
           <li>blab blab bla </li>
         </ul>
+    </div>
 
         <h4> Så här gör du: </h4>
         <ol>
