--- a/RoomofRequirements.html
+++ b/RoomofRequirements.html
@@ -9,22 +9,31 @@
   </head>
 
  <body>
-   <div class="rrhero">
+   <div class="arrowh1">
+    <a href="./index.html"> <svg xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      x="0px" y="0px" width="45px" height="45px"
+      viewBox="0 0 24 24"><polyline fill="none" stroke="#FFC500"
+      stroke-width="4" stroke-linecap="square" stroke-miterlimit="10"
+      points="17,2 7,12 17,22 " transform="translate(0, 0)" stroke-linejoin="miter"></polyline></svg>
+     </a>
+   <div class="hero2">
      <h1> Room of Requirements!</h1>
-        <img src="./Image/diverse.jpg">
+        <img src="./image/diverse.jpg">
       <h2>Här hittar du alla saker du kan önska dig!</h2>
    </div>
-
    <div class="rrfirstpost">
       <h3> Bygg din egna Hogwartspenhållare </h3>
       <h4> Du kommer behöva: </h4>
+      <div class="lista">
         <ul>
           <li>blab blab bla </li>
           <li>blab blab bla </li>
           <li>blab blab bla </li>
         </ul>
-
+      </div>
         <h4> Så här gör du: </h4>
+      <div class="lista">
         <ol>
           <li> blab blab bla .</li>
           <li> blab blab bla .</li>
@@ -34,7 +43,7 @@
           <li> blab blab bla </li>
           <li> blab blab bla !</li>
         </ol>
-
+      </div>
         <h4> Här kan du se hur jag gjorde: </h4>
           <embed src="https://www.youtube.com/embed/dwBVoAVZ1NY" iframe width="1369" height="579" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
    </div>
