--- a/acciowand.html
+++ b/acciowand.html
@@ -9,9 +9,17 @@
   </head>
 
  <body>
-    <div class="awhero">
+
+    <a href="./index.html"> <svg xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      x="0px" y="0px" width="45px" height="45px"
+      viewBox="0 0 24 24"><polyline fill="none" stroke="#FFC500"
+      stroke-width="4" stroke-linecap="square" stroke-miterlimit="10"
+      points="17,2 7,12 17,22 " transform="translate(0, 0)" stroke-linejoin="miter"></polyline></svg>
+     </a>
+    <div class="hero2">
       <h1> Accio, wand!</h1>
-      <img src="./Image/hpwand.png">
+      <img src="./Image/hpwand.png" class="imgresize3">
       <h2> Jag hjälper dig att bli bättre än Olivander på att göra trollstavar! </h2>
     <div/>
 
