--- a/hin.html
+++ b/hin.html
@@ -8,8 +8,21 @@
   </head>
 
 <body>
-  <h1> Hej! </h1>
+  <div class="arrowh1">
+  <div class="arrow">
+   <a href="./index.html"> <svg xmlns="http://www.w3.org/2000/svg"
+     xmlns:xlink="http://www.w3.org/1999/xlink"
+     x="0px" y="0px" width="45px" height="45px"
+     viewBox="0 0 24 24"><polyline fill="none" stroke="#FFC500"
+     stroke-width="4" stroke-linecap="square" stroke-miterlimit="10"
+     points="17,2 7,12 17,22 " transform="translate(0, 0)" stroke-linejoin="miter"></polyline></svg>
+    </a>
+  </div>
+    <h1> Hej!</h1>
+  </div>
    <div class="hejninja">
      <img src="./Image/ninjahp2.jpg" class="imgresize2">
    </div>
+   <div class="sluttex">
     <p> Jag heter Ninja och jag ÄLSKAR Harry Potter och att pyssla. Här hittar du allt jag gjort </p>
+  </div>
